Release Warlockery 1.5.1